# _YJD_cmake_practice2

./: .gitignore  CMakeLists.txt  Functions.cmake  IncVariable.cmake  ReadMe.txt  env_print.bat  function.cmake  main.cpp  methods.cpp  methods2.cpp  methods3.cpp
libadd/: CMakeLists.txt
libadd/include/: addition.h
libadd/include/libadd/: addition.h
libadd/src/: addition.cpp
libcalculator/: CMakeLists.txt
libcalculator/include/: calculator.h
libcalculator/src/: calculator.cpp
libcommon/: CMakeLists.txt
libcommon/include/: printer.h
libcommon/src/: printer.cpp
libdiv/: CMakeLists.txt
libdiv/include/: div.h
libdiv/src/: div.cpp
libmath/: CMakeLists.txt
libmath/include/math/: export_libmath_def.h  math.h
libmath/src/: math.cpp
libmul/: CMakeLists.txt
libmul/include/: mul.h
libmul/src/: mul.cpp
libsub/: CMakeLists.txt
libsub/include/: subtraction.h
libsub/src/: subtraction.cpp
libtest/: CMakeLists.txt
